# cargo-featalign

./: .gitignore  .taplo.toml  AGENTS.md  Cargo.toml  Makefile.toml  README.md  build.rs
.github/: ruleset-any.json  ruleset-default.json
.github/workflows/: checks.yml  release.yml  staging.yml
mock/: Cargo.toml  Cargo.toml.expect
mock/general/a/: Cargo.toml
mock/general/b/: Cargo.toml
mock/general/c/: Cargo.toml
mock/general/d/: Cargo.toml
mock/general/e/: Cargo.toml
mock/general/f/: Cargo.toml
mock/nested/a/: Cargo.toml  Cargo.toml.expect
mock/nested/b/: Cargo.toml  Cargo.toml.expect
mock/nested/c/: Cargo.toml
mock/nested/d/: Cargo.toml
mock/optional/a/: Cargo.toml
mock/pallet/b/: Cargo.toml
mock/pallet/c/: Cargo.toml
mock/pallet/d/: Cargo.toml
mock/primitive/a/: Cargo.toml
mock/primitive/b/: Cargo.toml
mock/primitive/c/: Cargo.toml
mock/primitive/d/: Cargo.toml
src/: analyzer.rs  cli.rs  main.rs  processor.rs  resolver.rs  shared.rs  sorter.rs  test.rs  util.rs
