[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "Cargo features alignment tool."
edition     = "2021"
homepage    = "https://hack.ink/cargo-featalign"
license     = "GPL-3.0"
name        = "cargo-featalign"
readme      = "README.md"
repository  = "https://github.com/hack-ink/cargo-featalign"
version     = "0.6.3"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
# crates.io
anyhow         = { version = "1.0" }
cargo_metadata = { version = "0.18" }
clap           = { version = "4.4", features = ["derive"] }
color-eyre     = { version = "0.6" }
fxhash         = { version = "0.2" }
imara-diff     = { version = "0.1" }
num_cpus       = { version = "1.16" }
once_cell      = { version = "1.19" }
regex          = { version = "1.10" }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = { version = "1.0" }
toml_edit      = { version = "0.22" }
