[package]
authors     = ["Xavier Lau <x@acg.box>"]
build       = "build.rs"
categories  = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
description = "Cargo features alignment tool."
edition     = "2024"
homepage    = "https://hack.ink/cargo-featalign"
keywords    = ["cargo", "cli", "features", "lint", "workspace"]
license     = "GPL-3.0"
name        = "cargo-featalign"
readme      = "README.md"
repository  = "https://github.com/hack-ink/cargo-featalign"
version     = "0.7.0"

[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
pkg-url = "{ repo }/releases/download/v{ version }/cargo-featalign-{ target }{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/v{ version }/cargo-featalign-x86_64-unknown-linux-gnu.tar.gz"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen-gitcl = { version = "1.0", features = ["cargo"] }

[dependencies]
# crates.io
anyhow         = { version = "1.0" }
cargo_metadata = { version = "0.19" }
clap           = { version = "4.5", features = ["derive"] }
color-eyre     = { version = "0.6" }
fxhash         = { version = "0.2" }
imara-diff     = { version = "0.1" }
num_cpus       = { version = "1.16" }
once_cell      = { version = "1.20" }
regex          = { version = "1.11" }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = { version = "1.0" }
toml_edit      = { version = "0.22" }
