[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "nested-b"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "nested-b"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.0.0"

[dependencies]
nested-c = { path = "../c", default-features = false }

[features]
default = ["std"]
std     = []
