[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "nested-d"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "nested-d"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.0.0"

[features]
default = ["std"]
std     = []
