[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "nested-d"
edition     = "2021"
homepage    = "https://hack.ink/cargo-featalign"
license     = "GPL-3.0"
name        = "nested-d"
readme      = "README.md"
repository  = "https://github.com/hack-ink/cargo-featalign"
version     = "0.0.0"

[features]
default = ["std"]
std     = []
