[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "primitive-a"
edition     = "2021"
homepage    = "https://hack.ink/cargo-featalign"
license     = "GPL-3.0"
name        = "primitive-a"
readme      = "README.md"
repository  = "https://github.com/hack-ink/cargo-featalign"
version     = "0.0.0"

[dependencies]
nested-a = { path = "../../nested/a", default-features = false }

[features]
default = ["std"]
std = [
	"nested-a/std",
]
